# job-swarm

./: .env.hosted.example  .env.ops.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
Casks/: ml-job-swarm.rb
data/: seed_companies.json
design-specs/: README.md
docs/: cloud-production-server-goals.md  maintainer-production-ops.md  product-tiers.md  tier1-macos-release.md  tier2-hosted-web.md  tier3-app-stores.md
macos/: README.md
ml_job_swarm/: adapters.py  api_v1.py  app.py  app_logging.py  auth_middleware.py  authz.py  catalog.py  catalog_import.py  cli.py  cloud_auth.py  cloud_logging.py  cloud_runtime.py  cloud_worker.py  csv_export.py  decisions.py  error_sanitize.py  filtering.py  hosted_migration.py  hosting.py  ingest.py  linkedin_connections.py  llm.py  models.py  openrouter.py  product_goals.py  profile.py  resume_assets.py  resume_extract.py  resume_storage.py  resume_validation.py  source_policy.py  store.py  supabase_auth.py  upload_limits.py
scripts/: bootstrap-supabase.sh  build-macos-app.sh  bump-homebrew-cask.sh  cloud-health-probe.sh  install-macos-release.sh  live_e2e_smoke.py  migrate-sqlite-to-postgres.sh  notarize-macos-app.sh  package-macos-release.sh  publish-github-release.sh  railway-cutover.sh  railway-preflight.sh  run-cloud-load-test.py  run-cloud-parity-check.sh  run-macos-app.sh  run-production-ops.sh  seed_refresh_audit.py  sign-macos-app.sh  smoke-hosted.sh  smoke-macos-release.sh  smoke-postgres-cutover.sh  start-cloud-worker.sh  start-hosted.sh  start-railway.sh  sync-supabase-secrets.sh  (+1 more)
(+373 files in other folders)
