[project]
name = "ml-job-swarm"
version = "0.1.0"
description = "Local-first job catalog and resume matching for curated technical roles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
]

[project.scripts]
ml-job-swarm = "ml_job_swarm.cli:main"
ml-job-swarm-cloud-worker = "ml_job_swarm.cloud_worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_job_swarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
